code/contacts/org.eclipse.scout.contacts.ui.html/src/main/js/contacts/form/UserForm.less
/*******************************************************************************
 * Copyright (c) 2015 BSI Business Systems Integration AG.
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Eclipse Distribution License v1.0
 * which accompanies this distribution, and is available at
 * http://www.eclipse.org/org/documents/edl-v10.html
 *
 * Contributors:
 *     BSI Business Systems Integration AG - initial API and implementation
 ******************************************************************************/

.contacts-user-form {
  white-space: nowrap;
}

.contacts-user-form-image {
  display: inline-block;
  vertical-align: top;

  & > img {
    border-radius: 10px;
    border: 1px solid transparent;
    padding: 0px;
    height: 110px;
  }
}

.contacts-user-form-link-box {
  display: inline-block;
  vertical-align: top;
  padding-top: 10px;
  margin-left: 20px
}

.contacts-user-form-link-row {
  margin-bottom: 14px;

  & > .app-link {
    outline-style: none;
    text-decoration: none;
  }
}

